GUI -> Adapter, Base Components, Campaign Options, Control, Dialog -> faction Standing, icon dialogs, personnel markets
Signed-off-by: Richard J Hancock <rjhancock@tapenvy.us>